# lua-cmake-source

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT  README  TODO  configure
etc/cmake/: FindPCRE.cmake
libs/: CMakeLists.txt
libs/lpeg/: CMakeLists.txt  Makefile  VERSION.TXT  lpeg.c  lpeg.def
libs/lphpserialize/: CMakeLists.txt  Makefile  lphpserialize.c  lphpserialize.def  util.c  util.h
libs/lrandom/: CMakeLists.txt  Makefile  VERSION.TXT  lrandom.c  lrandom.def  test.lua
libs/lrexlib/: CMakeLists.txt  Makefile  VERSION.TXT  lrexlib.def
libs/lrexlib/src/pcre/: lpcre.c  lpcre_f.c
libs/lua/: VERSION.TXT
libs/lua-phpserialize/: CMakeLists.txt  VERSION.TXT
libs/lua/src/: CMakeLists.txt  luaconf.h
libs/luabins/: CMakeLists.txt  luabins.def
libs/luabitop/: CMakeLists.txt  VERSION.TXT  bit.c  bit.def
libs/luajit/: CMakeLists.txt  VERSION.TXT
libs/luajit/src/: CMakeLists.txt  buildvm_x86.h
libs/mixlua/: CMakeLists.txt  Makefile  VERSION.TXT  mixlua.c  mixlua.def
src/: CMakeLists.txt
src/test/: CMakeLists.txt  main.cpp
