macro(LuaModule LuaModuleName LuaModuleFiles)
	add_library(${LuaModuleName} SHARED ${LuaModuleFiles})

	set(compile_flags "")
	set(link_flags "")
	set(definitions "")

	if(UNIX)
		if(APPLE)
			set(link_flags ${link_flags} "-dynamiclib -single_module -undefined dynamic_lookup")
		else(APPLE)
			set(LIBS ${LIBS} m)
			set(link_flags ${link_flags} "-Wl,-shared")
		endif(APPLE)
	else(UNIX)
		if(WIN32)
			set(definitions "${definitions} -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -D_SCL_SECURE_NO_WARNINGS")
			target_link_libraries(${LuaModuleName} lua)
		endif(WIN32)
	endif(UNIX)

	if(NOT ${definitions} EQUAL "")
		add_definitions(${definitions})
	endif(NOT ${definitions} EQUAL "")

	if(${WITH_LUACPP} EQUAL "1")
		set_target_properties(${LuaModuleName} PROPERTIES LINKER_LANGUAGE "CXX")
		set_source_files_properties(${LuaModuleFiles} PROPERTIES LANGUAGE "CXX")
	endif(${WITH_LUACPP} EQUAL "1")

	if(NOT ${compile_flags} EQUAL "")
		set_target_properties(${LuaModuleName} PROPERTIES COMPILE_FLAGS ${compile_flags})
	endif(NOT ${compile_flags} EQUAL "")

	if(NOT ${link_flags} EQUAL "")
		set_target_properties(${LuaModuleName} PROPERTIES LINK_FLAGS ${link_flags})
	endif(NOT ${link_flags} EQUAL "")

	if(WIN32)
		set_target_properties(${LuaModuleName} PROPERTIES PREFIX "../")
	endif(WIN32)
endmacro(LuaModule)

if(${WITH_LUAJIT} EQUAL "1")
	subdirs(luajit)
else(${WITH_LUAJIT} EQUAL "1")
	subdirs(lua)
	subdirs(luabitop)
endif(${WITH_LUAJIT} EQUAL "1")
subdirs(lpeg)
subdirs(lrandom)
subdirs(lrexlib)
subdirs(mixlua)
subdirs(lphpserialize)
subdirs(luabins)
